--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,16 +2,10 @@ FROM ghcr.io/rust-lang/crates-build-env/linux
 
 ENV PATH=/root/.cargo/bin:$PATH
 
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --profile=minimal -y && \
-    cargo install rustup-toolchain-install-master xargo cargo-nextest && \
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | \
+    sh -s -- --default-toolchain=nightly --component=rust-src --profile=minimal -y && \
     cargo install --git https://github.com/saethlin/miri-tools cargo-download && \
-    git clone --depth=1 https://github.com/rust-lang/miri && \
-    cd miri && \
-    ./rustup-toolchain && \
-    ./miri check && \
-    ./miri install && \
-    rustup default miri && \
-    rustup toolchain remove stable
+    cargo install cargo-nextest
 
 RUN apt-get update && \
     apt-get install -y time clang lld expect && \
